Commit Notifications and Follow

--- a/react-twitterapp/src/Components/Admin/GetTweetsAdmin.css
+++ b/react-twitterapp/src/Components/Admin/GetTweetsAdmin.css
@@ -26,12 +26,12 @@
 }
 
 .tweet-userId {
-    font-size:1em !important;
+    font-weight: bold;
+    font-size: 1.2em;
     color: #333;
 }
 
 .tweet-message {
-    padding-top: 20px;
     font-size: 1em;
     color: #555;
 }
