--- a/react-twitterapp/src/Components/Home/Notifications.css
+++ b/react-twitterapp/src/Components/Home/Notifications.css
@@ -1,5 +1,5 @@
 /* Container styling */
-.comments-container {
+.tweets-container {
     width: 80%;
     margin: 20px auto;
     padding: 20px;
@@ -9,7 +9,7 @@
 }
 
 /* Title styling */
-.comments-title {
+.tweets-title {
     font-size: 24px;
     font-weight: bold;
     color: #333;
@@ -23,14 +23,14 @@
     margin-bottom: 15px;
 }
 
-/* Comments list styling */
-.comments-list {
+/* Tweets list styling */
+.tweets-list {
     list-style-type: none;
     padding: 0;
 }
 
-/* Individual comment item styling */
-.comment-item {
+/* Individual tweet item styling */
+.tweet-item {
     background-color: #ffffff;
     padding: 15px;
     margin-bottom: 15px;
@@ -38,35 +38,28 @@
     box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.1);
 }
 
-/* Comment user ID styling */
-.comment-user {
-    font-size: 16px;
-    color: #007bff;
+/* Tweet user ID styling */
+.tweet-userId {
+    font-size: 14px;
+    color: black;
     margin-bottom: 8px;
 }
 
-/* Comment content styling */
-.comment-content {
+/* Tweet message styling */
+.tweet-message {
     font-size: 16px;
     color: #555;
     margin-bottom: 8px;
 }
 
-/* Comment tweet ID styling */
-.comment-tweet {
-    font-size: 14px;
-    color: #888;
-    margin-bottom: 8px;
-}
-
-/* Comment created date styling */
-.comment-created {
+/* Tweet created date styling */
+.tweet-created {
     font-size: 12px;
     color: #bbb;
 }
 
-/* No comments styling */
-.no-comments {
+/* No tweets styling */
+.no-tweets {
     font-size: 16px;
     color: #999;
     text-align: center;
