--- a/react-twitterapp/src/Components/Admin/AdminDashboard.css
+++ b/react-twitterapp/src/Components/Admin/AdminDashboard.css
@@ -53,7 +53,7 @@
 .admin-content {
     flex-grow: 1;
     padding: 40px;
-    background-color: #ffffff;
+    background-color: #eef2f4;
     box-shadow: -5px 0px 15px rgba(0, 0, 0, 0.1);
 }
 
@@ -67,3 +67,4 @@ h1{
 h4 {
     color: #1da1f2;
 }
+
